--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,14 +11,10 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version:
-          - "3.8"
-          - "3.9"
           - "3.10"
           - "3.11"
           - "3.12"
           - "3.13"
-          - "pypy-3.8"
-          - "pypy-3.9"
     name: Test
     runs-on: ${{ matrix.os }}
 
@@ -32,7 +28,7 @@ jobs:
           python-version: ${{ matrix.python-version  }}
 
       - name: Install dependencies
-        run: python -m pip install pytest .
+        run: python -m pip install pytest
 
       - name: Run tests
-        run: pytest
+        run: pytest tests/
