--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,4 +31,6 @@ jobs:
         run: python -m pip install pytest
 
       - name: Run tests
-        run: pytest tests/ -v
+        run: |
+          export PYTHONPATH="${PYTHONPATH}:."
+          pytest -v
