--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,12 +25,17 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version  }}
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: python -m pip install pytest
 
       - name: Run tests
+        shell: bash
         run: |
-          export PYTHONPATH="${PYTHONPATH}:."
+          if [[ "$RUNNER_OS" == "Windows" ]]; then
+            $env:PYTHONPATH="$env:PYTHONPATH;."
+          else
+            export PYTHONPATH="${PYTHONPATH}:."
+          fi
           pytest -v
