--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,9 @@ jobs:
     name: Test
     runs-on: ${{ matrix.os }}
 
+    env:
+      PYTHONPATH: ${{ github.workspace }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -31,11 +34,4 @@ jobs:
         run: python -m pip install pytest
 
       - name: Run tests
-        shell: bash
-        run: |
-          if [[ "$RUNNER_OS" == "Windows" ]]; then
-            $env:PYTHONPATH="$env:PYTHONPATH;."
-          else
-            export PYTHONPATH="${PYTHONPATH}:."
-          fi
-          pytest -v
+        run: pytest -v
